# kaggle-imaterialist2020-model

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements_from_poetry.txt  requiremets-spotty.txt  requiremnts_from_poetry.txt  setup.py  spotty.yaml
.github/: pull_request_template.md
cmd/: predict_by_estimator.py
cmd/segment/: __main__.py
cmd/segment_from_gcs_to_bq/: __main__.py  goods_annotation_schema.json
configs/spinenet/: sn143-imat-v2.yaml
kaggle_imaterialist2020_model/: counter.py  io.py  json_logger.py  segmentor.py  transforms.py  types.py
kaggle_imaterialist2020_model/cmd/: check.py  segment.py
scripts/: _predict.sh  create_tf_records.sh  dump_filenames_to_predict.sh  install_py_deps.sh  install_requirements.sh  install_tfrecord_requirements.sh  predict.sh  setup.sh  setup_bashrc.sh  tpu.sh  train.sh
scritps/: setup_tpu.sh  tpu.sh
tf_tpu_models/hyperparameters/: flags_to_params.py
tf_tpu_models/official/detection/: inference.py  main.py  test_augmentations.py
tf_tpu_models/official/detection/configs/: base_config.py  detection_config.py  maskrcnn_config.py
tf_tpu_models/official/detection/dataloader/: factory.py  input_reader.py  maskrcnn_parser.py  tf_example_decoder.py
tf_tpu_models/official/detection/evaluation/: attributes.py  coco_evaluator.py  coco_utils.py  cocoeval.py  factory.py  submission.py
tf_tpu_models/official/detection/executor/: tpu_executor.py
tf_tpu_models/official/detection/modeling/: base_model.py  losses.py  maskrcnn_model.py
tf_tpu_models/official/detection/ops/: sampling_ops.py
tf_tpu_models/official/detection/utils/: input_utils.py  (+2 more)
tf_tpu_models/official/efficientnet/: inspect_model_architecture.py
tf_tpu_models/official/mask_rcnn/: anchors.py  coco_metric.py  coco_utils.py  dataloader.py  distributed_executer.py  evaluation.py  export_saved_model.py  fpn.py  heads.py  losses.py  mask_rcnn_main.py  mask_rcnn_model.py  nn_ops.py  postprocess_ops.py  preprocess_ops.py  resnet.py  roi_ops.py  serving.py  submission.py  training_ops.py
tf_tpu_models/official/mnasnet/: eval_ckpt_main.py  imagenet_input.py  mnas_utils.py  mnasnet_main.py  mnasnet_model.py  mnasnet_models.py  post_quantization.py
tools/: join_prediction_with_filename.py
tools/datasets/: create_coco_tf_record.py
tpu_configs/: example.json
(+20 files in other folders)
