[tool.poetry]
name = "kaggle-imaterialist2020-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Cython = "^0.29.23"
matplotlib = "^3.4.1"
opencv-python-headless = "^4.5.1"
PyYAML = "^5.4.1"
Pillow = "^8.2.0"
scikit-learn = "^0.24.1"
pandas = "^1.2.4"
tqdm = "^4.60.0"
google-api-python-client = "^2.2.0"
oauth2client = "^4.1.3"
gcsfs = "^0.8.0"
spotty = "^1.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
mypy = "^0.812"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
